<resources>
    <string name="app_name">CorpoSign</string>
    <string name="action_settings">Settings</string>
    <string name="lblNome">Nome</string>
    <string name="lblLogin">Login</string>
    <string name="lblSenha">Senha</string>
    <string name="btnCadastro">Cadastrar</string>
    <string name="btnLogin">Login</string>
    <string name="title_activity_cadastro">Cadastro</string>
    <string name="title_activity_central_acoes">CentralAcoes</string>
    <string name="title_activity_sobre">Sobre</string>
    <string name="title_activity_iniciar_expediente">IniciarExpediente</string>
    <string name="title_activity_mapa">Mapa</string>
    <string name="start_geofence_service">Iniciando serviço de transição de GeoFence</string>
    <string name="entering_geofence">Entrando na cerca geográfica da XYZ</string>
    <string name="exiting_geofence">Saindo da cerca geográfica da XYZ</string>
</resources>
