<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="corposign.corposign.Cadastro"
    tools:showIn="@layout/activity_cadastro">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_weight="6"
        android:gravity="center_vertical|center_horizontal"
        android:layout_height="wrap_content">

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/lblNome"
                android:text="@string/lblNome"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <EditText
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/txtNome"
                android:background="@color/clara"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/lblLogin"
                android:text="@string/lblLogin"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <EditText
                android:layout_width="180dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/txtLogin"
                android:background="@color/clara"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/lblSenha"
                android:text="@string/lblSenha"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <EditText
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/txtSenha"
                android:background="@color/clara"/>
        </TableRow>

    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCadastro"
        android:onClick="cadastrar"
        android:text="@string/btnCadastro"/>

</LinearLayout>
