<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/textura"
    android:gravity="center_vertical|center_horizontal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="corposign.corposign.MainActivity"
    tools:showIn="@layout/activity_main">

    <TableLayout
        android:gravity="center_vertical|center_horizontal"
        android:layout_width="match_parent"
        android:layout_weight="4"
        android:layout_height="wrap_content">

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/lblLogin"
                android:text="@string/lblLogin"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <EditText
                android:layout_width="180dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/txtLogin"
                android:background="@color/clara"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/lblSenha"
                android:text="@string/lblSenha"
                android:textAppearance="?android:attr/textAppearanceLarge"/>


            <EditText
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/txtSenha"
                android:inputType="textPassword"
                android:background="@color/clara"/>
        </TableRow>

    </TableLayout>


    <LinearLayout
        android:gravity="center_vertical|center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            android:text="@string/btnLogin"
            android:onClick="fazLogin"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnNovo"
            android:text="Cadastrar"
            android:onClick="novoCadastro"/>

    </LinearLayout>

</LinearLayout>
